--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/lab1
-spring.datasource.username= lab1user
-spring.datasource.password= 0000
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.sql.init.mode=always
+datasource.url=jdbc:postgresql://localhost:5432/lab1
+datasource.username=lab1user
+datasource.password=0000
+datasource.driver-class-name=org.postgresql.Driver
